--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -23,8 +23,9 @@
         app:srcCompat="@drawable/ic_directions"
         app:tint="@color/color_white" />
     <!--Map content-->
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn"
+        app:backgroundTint="?attr/colorAccent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Arrive" />
