--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="-48dp"
-        android:tint="@color/midnight"
+        android:tint="?attr/entryFooter"
         app:srcCompat="@drawable/ic_img_road_map" />
 
     <LinearLayout
@@ -47,6 +47,7 @@
                 android:focusable="true"
                 android:fontFamily="@font/pt_sans"
                 android:text="@string/entry_log_in"
+                android:textColor="?attr/textColor"
                 android:contentDescription="@string/desc_show_login"
                 android:textSize="16sp" />
 
@@ -55,6 +56,7 @@
                 android:text="@string/entry_sign_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?attr/textColor"
                 android:clickable="true"
                 android:focusable="true"
                 android:textSize="16sp"
