--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,28 +13,27 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/InputEditText"
             android:id="@+id/login_input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="?attr/textColor"
             android:hint="@string/hint_email"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_input_email"
                 style="@style/InputEditText"
-                app:hintTextColor="?attr/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/InputEditText"
             android:layout_marginTop="8dp"
             android:id="@+id/login_input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="?attr/textColor"
             android:hint="@string/hint_password"
             app:errorEnabled="true">
 
