--- a/app/src/main/res/layout/request_header.xml
+++ b/app/src/main/res/layout/request_header.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/roboto"
-        android:textColor="@color/color_dark"
+        android:textColor="?attr/textColor"
         android:textSize="12sp"
         android:textStyle="bold"
         app:lineHeight="14sp" />
