--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/bgColor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QRActivity">
 
@@ -27,7 +28,7 @@
         android:layout_above="@+id/qr_code_container"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
-        android:textColor="@color/color_dark"
+        android:textColor="@color/color_white"
         android:text="@string/qr_valid" />
 
     <FrameLayout
@@ -54,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:textColor="@color/color_white"
         android:layout_below="@id/qr_code_container"
         android:layout_centerHorizontal="true"
         android:backgroundTint="?attr/buttonColor"
