--- a/app/src/main/res/layout/fragment_qr_fail.xml
+++ b/app/src/main/res/layout/fragment_qr_fail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="@color/orange"
+    android:background="?attr/altBgColor"
     android:paddingStart="48dp"
     android:paddingEnd="48dp"
     android:layout_height="match_parent">
@@ -15,7 +15,6 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/color_white"
-        android:text="message"
         android:textAlignment="center" />
 
     <com.google.android.material.button.MaterialButton
@@ -25,7 +24,8 @@
         android:layout_marginTop="24dp"
         android:layout_below="@+id/qr_fail_message"
         android:layout_centerInParent="true"
-        android:backgroundTint="@color/color_dark"
+        android:textColor="@color/color_white"
+        android:backgroundTint="?attr/qrScannedButtonColor"
         android:text="@string/qr_go_back"
         />
 
