--- a/app/src/main/res/layout/row_friend_search_results.xml
+++ b/app/src/main/res/layout/row_friend_search_results.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="@color/color_dark"
+            android:textColor="?attr/textColor"
             android:textSize="16sp"
             android:text="@string/hint_username"/>
 
@@ -31,7 +31,7 @@
         android:layout_alignParentEnd="true"
         android:contentDescription="@string/send_friend_request"
         android:src="@drawable/ic_add"
-        android:tint="?attr/imageButtonStyle"/>
+        android:tint="?attr/listIconButtonColor"/>
 
     <ImageView
         style="@style/StatusIcon"
