--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -7,6 +7,6 @@
       android:translateY="-74.393166">
     <path
         android:pathData="M0,0h1024v1024h-1024z"
-        android:fillColor="#ffffff"/>
+        android:fillColor="@color/color_primary"/>
   </group>
 </vector>
