--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -26,8 +26,11 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn"
         app:backgroundTint="?attr/colorAccent"
+        android:textColor="@color/color_white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="Arrive" />
 
     <include layout="@layout/map_content" />
