--- a/app/src/main/res/layout/fragment_qr_success.xml
+++ b/app/src/main/res/layout/fragment_qr_success.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="128dp"
-    android:backgroundTint="@color/orange"
-    android:background="@color/color_white_accent">
+    android:background="?attr/altBgColor">
 
     <LinearLayout
         android:id="@+id/qr_scanned_friend_container"
@@ -27,7 +26,7 @@
             android:id="@+id/friends_list_row_avatar"
             android:layout_width="128dp"
             android:layout_height="128dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="48dp"
             android:src="@drawable/ic_avatar_ph"/>
 
         <TextView
@@ -37,7 +36,7 @@
             android:layout_marginTop="8dp"
             android:textSize="30sp"
             android:textStyle="bold"
-            android:textColor="@color/color_white"/>
+            android:textColor="?attr/textOnColorSurface"/>
     </LinearLayout>
 
 
@@ -45,8 +44,9 @@
         android:id="@+id/qr_scanned_btn_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:backgroundTint="@color/color_dark"
+        android:layout_marginTop="24dp"
+        android:textColor="@color/color_white"
+        android:backgroundTint="?attr/qrScannedButtonColor"
         android:layout_below="@+id/qr_scanned_friend_container"
         android:layout_centerHorizontal="true"
         android:text="@string/qr_continue"
