--- a/app/src/main/res/layout/request_dialog.xml
+++ b/app/src/main/res/layout/request_dialog.xml
@@ -1,104 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_layout"
+    android:padding="16dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="?attr/bgColor"
-    android:padding="16dp">
+    android:background="@drawable/bg_dialog">
 
-    <TextView
-        android:id="@+id/textView"
+    <RelativeLayout
+        android:id="@+id/meeting_parent_container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
-        android:text="@string/new_title"
-        android:textColor="@color/color_primary"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_toEndOf="@+id/textView"
-        android:fontFamily="@font/roboto"
-        android:text="@string/meeting_request"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/friends_filter_layout"
-        style="@style/InputEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:hint="@string/filter_friends"
-        app:errorEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_filter_friends"
-            style="@style/InputEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <ScrollView
-        android:id="@+id/scroll_view_chips"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_below="@id/friends_filter_layout"
-        android:layout_alignParentEnd="false">
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chip_group"
+        <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            app:chipSpacing="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:singleSelection="true">
-        </com.google.android.material.chip.ChipGroup>
-    </ScrollView>
+            android:fontFamily="@font/roboto"
+            android:text="@string/new_title"
+            android:textColor="@color/color_primary"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <ProgressBar
-        android:id="@+id/friends_spinner"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/scroll_view_chips"
-        android:layout_alignTop="@+id/scroll_view_chips"
-        android:layout_alignEnd="@+id/scroll_view_chips"
-        android:layout_alignBottom="@+id/scroll_view_chips"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="48dp"
-        android:visibility="gone" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_toEndOf="@+id/textView"
+            android:fontFamily="@font/roboto"
+            android:text="@string/meeting_request"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/location_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/scroll_view_chips"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:checked="false"
-        android:textColor="?attr/textColor"
-        android:text="@string/cafe_switch" />
+
+        <RelativeLayout
+            android:id="@+id/meeting_req_container"
+            android:visibility="invisible"
+            android:layout_below="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/friends_filter_layout"
+                style="@style/InputEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/filter_friends"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/input_filter_friends"
+                    style="@style/InputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <ScrollView
+                android:id="@+id/scroll_view_chips"
+                android:layout_width="match_parent"
+                android:maxHeight="128dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/friends_filter_layout"
+                android:layout_alignParentEnd="false">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chip_group"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    app:chipSpacing="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:singleSelection="true">
+                </com.google.android.material.chip.ChipGroup>
+            </ScrollView>
+
+            <ProgressBar
+                android:id="@+id/friends_spinner"
+                style="?android:attr/progressBarStyle"
+                android:elevation="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignStart="@+id/scroll_view_chips"
+                android:layout_alignTop="@+id/scroll_view_chips"
+                android:layout_alignEnd="@+id/scroll_view_chips"
+                android:layout_alignBottom="@+id/scroll_view_chips"
+                android:layout_marginStart="48dp"
+                android:layout_marginTop="48dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="48dp"
+                android:visibility="gone" />
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/location_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/scroll_view_chips"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:checked="false"
+                android:textColor="?attr/textColor"
+                android:text="@string/cafe_switch" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/meeting_no_friends_container"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:layout_below="@+id/textView">
+
+            <TextView
+                android:id="@+id/meeting_no_friends_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/meeting_no_friend"
+                android:textColor="?attr/textColor"/>
+        </RelativeLayout>
+    </RelativeLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/send_btn"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/location_switch"
+        android:layout_below="@+id/meeting_parent_container"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/color_white"
+        android:insetBottom="0dp"
+        android:insetTop="16dp"
         android:backgroundTint="?attr/buttonColor"
         android:text="@string/send_meeting_request"
         app:cornerRadius="4dp" />
@@ -108,12 +146,14 @@
         style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/location_switch"
+        android:insetBottom="0dp"
+        android:insetTop="16dp"
+        android:layout_below="@+id/meeting_parent_container"
         android:textColor="?attr/colorAccent"
-        android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
         android:text="@string/cancel"
         app:cornerRadius="4dp" />
 
-
 </RelativeLayout>
+
+
