--- a/app/src/main/res/layout/request_row.xml
+++ b/app/src/main/res/layout/request_row.xml
@@ -6,13 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    app:rippleColor="?attr/meetingRowRippleColor"
+    app:cardBackgroundColor="?attr/meetingRowBgColor"
     app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
 
         <ImageView
             android:id="@+id/imageView2"
@@ -31,8 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:fontFamily="@font/roboto"
-            android:textColor="@color/color_dark"
+            android:textColor="?attr/textColor"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/icon_view"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -57,7 +57,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="28dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="@string/status_icon_desc"
             android:tint="@color/color_primary"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +68,9 @@
             android:id="@+id/expanded_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="8dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
@@ -76,7 +78,7 @@
                 android:id="@+id/expanded_divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="?android:attr/listDivider"
+                android:background="?attr/meetingRowDividerColor"
                 app:layout_constraintBottom_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
@@ -85,11 +87,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/accept"
                 android:textColor="@color/color_white"
-                app:cornerRadius="4dp"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.button.MaterialButton
@@ -98,12 +99,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_alignStart="@+id/primary_btn"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="12dp"
                 android:text="@string/reject"
                 android:textColor="@color/color_primary"
-                app:cornerRadius="4dp"
-                app:layout_constraintStart_toEndOf="@+id/primary_btn"
+                app:layout_constraintRight_toLeftOf="@+id/primary_btn"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
