--- a/app/src/main/res/layout/view_search.xml
+++ b/app/src/main/res/layout/view_search.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
-    android:background="@color/orange">
+    android:background="?attr/surfaceArea">
         <RelativeLayout
             android:id="@+id/search_closed_view"
             android:layout_width="match_parent"
@@ -14,7 +14,7 @@
                 android:layout_height="24dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/ic_search"
                 android:backgroundTint="@color/color_white"
                 android:contentDescription="@string/search" />
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:background="@color/color_white"
+            android:background="?attr/searchViewBgColor"
             android:visibility="invisible">
 
             <View
@@ -34,7 +34,7 @@
                 android:layout_height="24dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="20dp"
                 android:background="@drawable/ic_search"
                 android:backgroundTint="@color/color_dark"
                 android:contentDescription="@string/execute_search" />
