--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="color_white_accent">#F3F3F3</color>
     <color name="color_light_grey">#DCDCDC</color>
     <color name="color_primary_light">#ff8b3e</color>
-    <color name="color_warning">#E00000</color>
+    <color name="color_warning">#DF261A</color>
 
     <color name="orange">#F45905</color>
     <color name="black">#000000</color>
@@ -24,6 +24,6 @@
     <color name="test">#03A9F4</color>
 
     <!-- Dark Theme -->
-    <color name="twilight">#121212</color>
-    <color name="midnight">#252525</color>
+    <color type="color" name="twilight">#121212</color>
+    <color type="color" name="midnight">#252525</color>
 </resources>
