--- a/app/src/main/res/layout/row_friend_request.xml
+++ b/app/src/main/res/layout/row_friend_request.xml
@@ -31,6 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="?attr/textColor"
             android:text="sent you a friend request"
             android:textSize="12sp"
             android:layout_below="@+id/row_friend_request_username"/>
@@ -44,9 +45,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:background="@color/color_primary"
         android:layout_centerVertical="true"
+        android:textColor="@color/color_primary"
         android:layout_toStartOf="@id/row_friend_request_btn_accept"
-        android:text="@string/deny"/>
+        android:text="Reject"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/row_friend_request_btn_accept"
@@ -54,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:backgroundTint="@color/color_primary"
         android:text="@string/accept"/>
 
 </RelativeLayout>
