--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -31,6 +31,20 @@
             android:textAlignment="center"
             android:textSize="16sp" />
 
+        <com.google.android.material.button.MaterialButton
+            style="@style/RoundImageButton"
+            android:id="@+id/meeting_button_refresh"
+            app:icon="@drawable/ic_refresh"
+            app:iconGravity="textStart"
+            app:iconTint="@color/orange"
+            app:iconPadding="0dp"
+            app:cornerRadius="40dp"
+            app:rippleColor="@color/color_primary"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            />
+
     </LinearLayout>
 
 
