--- a/app/src/main/res/layout/fragment_meeting.xml
+++ b/app/src/main/res/layout/fragment_meeting.xml
@@ -6,23 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.nopoint.midpoint.fragments.MeetingFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/peek_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:orientation="vertical">
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp">
 
-        <LinearLayout
+        <View
+            android:id="@+id/pill"
             android:layout_width="24dp"
             android:layout_height="4dp"
-            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
             android:background="@drawable/pull_up_rectangle" />
 
         <TextView
             android:id="@+id/meet_txt"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/pill"
+            android:layout_centerHorizontal="true"
             android:fontFamily="@font/pt_sans_bold"
             android:textColor="?attr/textColor"
             android:paddingTop="8dp"
@@ -38,14 +40,14 @@
             app:iconGravity="textStart"
             app:iconTint="@color/orange"
             app:iconPadding="0dp"
+            android:layout_marginEnd="8dp"
+            android:layout_alignParentEnd="true"
             app:cornerRadius="40dp"
             app:rippleColor="@color/color_primary"
             android:layout_gravity="center_horizontal"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 
     <androidx.recyclerview.widget.RecyclerView
